[package]
name = "compile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.89.1"
cranelift-frontend = "0.89.1"
cranelift-module = "0.89.1"
cranelift-native = "0.89.1"
cranelift-object = "0.89.1"
target-lexicon = "0.12.4"
